# ros-turtlesim-shapes

./: README.md  SUBMISSION_CHECKLIST.md  package.xml  setup.cfg  setup.py
backup/turtlebot3_smart_navigator/: decision_node.py  input_node.py  navigator_node.py
backup_before_fix/: __init__.py  decision_node.py  input_node.py  navigator_node.py
launch/: README_launch.md  navigator_launch.py  smart_navigator_launch.py
models/: fallback_rules.json  model.pkl
resources/: rooms.json
turtlebot3_smart_navigator/: __init__.py  decision_node.py  input_node.py  navigator_node.py
